<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#eeeeee"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            
            <TextView
                android:id="@+id/tv_allproject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myproject_tab1"
                android:textColor="@color/title_blue"/>
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            
            <TextView
                android:id="@+id/tv_takepartByme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myproject_tab2"
                android:textColor="@color/text_black"
                android:gravity="center"/>
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            
            <TextView
                android:id="@+id/tv_buildByme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myproject_tab3"
                android:textColor="@color/text_black"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/iv_tabline"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:background="@color/title_blue"/>
    
</LinearLayout>
